# ch_timedisc

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
computations/2D/: ch_crank_nicholson.py  ch_explicit_euler.py  ch_eyre.py  ch_implicit_euler.py  modified_CN.py  taylor_method.py
computations/3D/: ch_implicit_euler.py
computations/analysis/: Order_analysis.py  accurate_large_timestep_test.py  analysis_energy_dt.py  create_reference_solution.py  energy_derivative_evolutions.py  eyre_large_timestep_test.py  implicit_euler_large_timestep_test.py  load_reference_solution.py
src/ch_timedisc/: __init__.py
src/ch_timedisc/doublewell/: __init__.py  doublewell.py
src/ch_timedisc/energy/: __init__.py  energy.py
src/ch_timedisc/fem/: __init__.py  fem_handler.py
src/ch_timedisc/intital_conditions/: __init__.py  cross.py  initial_mu.py  initial_pf.py  interpolate_mu.py  random.py
src/ch_timedisc/parameters/: __init__.py  parameters.py
src/ch_timedisc/time_marching/: __init__.py  adaptive_time_step.py  adaptive_time_step_energy_diff.py  adaptive_time_step_energy_equality.py  adaptive_time_step_gradmu.py  time_marching.py
src/ch_timedisc/variational_forms/: __init__.py  accurate_dissipation.py  base.py  crank_nicholson.py  eyre.py  implicit_euler.py
src/ch_timedisc/visualization/: __init__.py  energy.py  pyvista_visualization.py
tests/: __init__.py  test_cross.py  test_doublewell.py  test_fem_handler.py  test_initial_pf.py  test_random.py
